--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>nahh pencet sekali lagi lekk</h1>
-    <img src=".jpg" width="200px">
+    <img src="ut@ iTechKM_20250404_084106_LMC-8.4--Videography-Config-by-iTechKM.jpg" width="200px">
   <nav>
     <ul>
       <li> <a href="https://maul-tech.github.io/maultech.com.id/" style="color:red;">back to page 1</li>
